# obstereo-2-2-x

autoconf/.svn/: all-wcprops  entries
cmake/.svn/: all-wcprops  entries
cmake/modules/.svn/: all-wcprops  entries
data/.svn/: all-wcprops  entries
doc/.svn/: all-wcprops  dir-prop-base  entries
include/.svn/: all-wcprops  entries
include/OB-BGL/.svn/: all-wcprops  entries
include/inchi/.svn/: all-wcprops  entries
include/libxml/.svn/: all-wcprops  entries
include/openbabel/.svn/: all-wcprops  entries
include/openbabel/stereo/: cistrans.h  squareplanar.h  stereo.h  tetrahedral.h  tetranonplanar.h  tetraplanar.h
scripts/.svn/: all-wcprops  entries
scripts/csharp/.svn/: all-wcprops  dir-prop-base  entries
scripts/java/.svn/: all-wcprops  dir-prop-base  entries
scripts/perl/.svn/: all-wcprops  entries
scripts/python/.svn/: all-wcprops  dir-prop-base  entries
scripts/ruby/.svn/: all-wcprops  entries
src/: cistrans.cpp  mol.cpp  squareplanar.cpp  tetrahedral.cpp  tetranonplanar.cpp  tetraplanar.cpp
src/.svn/: all-wcprops  dir-prop-base  entries
src/GUI/.svn/: all-wcprops  entries
src/descriptors/.svn/: all-wcprops  entries
src/fingerprints/.svn/: all-wcprops  entries
src/forcefields/.svn/: entries  (+1 more)
src/formats/: smilesformat.cpp
test/: CMakeLists.txt  uniqueidtest.cpp
test/.svn/: all-wcprops  dir-prop-base  entries
test/cmltest/.svn/: all-wcprops  entries
test/files/.svn/: all-wcprops  entries
test/inchi/.svn/: all-wcprops  entries
tools/.svn/: all-wcprops  dir-prop-base  entries
windows-vc2005/.svn/: all-wcprops  entries
(+92 files in other folders)
